5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1585_2895.log
== TEST (2019-03-21 11:40:37) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor do jogo a?"))
var2= float(input("Qual o valor do jogo b?"))
var3= float(input("Qual o valor do jodo c?"))

vferte = float(input("Qual o valor do frete?"))

precototal= (var1 + var2 + var3) + vfrete
 print(precototal)
-- ERROR:
File "XXXX", line 10
    print(precototal)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:44) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor do jogo a?"))
var2= float(input("Qual o valor do jogo b?"))
var3= float(input("Qual o valor do jodo c?"))

vferte = float(input("Qual o valor do frete?"))

precototal= (var1 + var2 + var3) + vfrete
print(precototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var3= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:24) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor do jogo a?"))
var2= float(input("Qual o valor do jogo b?"))
var3= float(input("Qual o valor do jodo c?"))

vfrete = float(input("Qual o valor do frete?"))

precototal= (var1 + var2 + var3) + vfrete
print(precototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var3= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:41:49) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor do jogo a?"))
var2= float(input("Qual o valor do jogo b?"))
var3= float(input("Qual o valor do jodo c?"))

vfrete = float(input("Qual o valor do frete?"))

precototal= (var1 + var2 + var3) + vfrete
print(precototal)
-- EXECUTION TIME:
0.186339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    var3= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:12) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= (var1 + var2 + var3) + vfrete
print(precototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    precototal= (var1 + var2 + var3) + vfrete
NameError: name 'var2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:36) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= (var1 * 5 + vfrete
print(precototal)
-- ERROR:
File "XXXX", line 9
    print(precototal)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:45) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete
print(precototal)
-- OUTPUT:
303.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:04) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete
print(precototal)
-- EXECUTION TIME:
0.186083
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
303.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
430.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5196.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:35) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete
print(precototal)
-- OUTPUT:
303.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:55) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete
print(precototal)
-- EXECUTION TIME:
0.208101
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
303.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
430.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5196.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:05) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete

print(precototal)
-- EXECUTION TIME:
0.203022
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
303.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
430.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5196.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:27) 
-- CODE:
num = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete

print(float(precototal))
-- EXECUTION TIME:
0.135644
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
303.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
430.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5196.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:01) 
-- CODE:
var2 = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


vfrete = float(input("Qual o valor do frete?"))

precototal= var1 * 5 + vfrete

print(float(precototal))
-- OUTPUT:
303.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:51:31) 
-- CODE:
var2 = int(input("No. de jogos:"))

var1= float(input("Qual o valor dos jogos?"))


var3 = float(input("Qual o valor do frete?"))

precototal= var1 * var2 + var3

print(float(precototal))
-- EXECUTION TIME:
0.18595
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
